{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 33,
  "lineage": "95da8b24-3152-7c73-cdf8-3f12c1f36044",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ee55e8690395ce9",
            "arn": "arn:aws:ec2:ap-south-1:919649536031:elastic-ip/eipalloc-09ee55e8690395ce9",
            "domain": "vpc",
            "id": "eipalloc-09ee55e8690395ce9",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-35-154-22-25.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.22.25",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "production-vpc-eip"
            },
            "tags_all": {
              "Name": "production-vpc-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919649536031:internet-gateway/igw-01e043ecbb50ccbf2",
            "id": "igw-01e043ecbb50ccbf2",
            "owner_id": "919649536031",
            "region": "ap-south-1",
            "tags": {
              "Name": "production-vpc-igw"
            },
            "tags_all": {
              "Name": "production-vpc-igw"
            },
            "vpc_id": "vpc-0cb81d2a1fe7c7060"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ee55e8690395ce9",
            "association_id": "eipassoc-05eec0335dcd380f5",
            "connectivity_type": "public",
            "id": "nat-0e81f543df01651e0",
            "network_interface_id": "eni-0cda8dfb9e824dea9",
            "private_ip": "10.0.1.186",
            "public_ip": "35.154.22.25",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c3c95c88c54c13cb",
            "tags": {
              "Name": "production-vpc-natgw"
            },
            "tags_all": {
              "Name": "production-vpc-natgw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919649536031:route-table/rtb-07925bc761839f55f",
            "id": "rtb-07925bc761839f55f",
            "owner_id": "919649536031",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e81f543df01651e0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-vpc-private-rt"
            },
            "tags_all": {
              "Name": "production-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb81d2a1fe7c7060"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919649536031",
            "id": "rtb-07925bc761839f55f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919649536031:route-table/rtb-0c2295a4324d9c76c",
            "id": "rtb-0c2295a4324d9c76c",
            "owner_id": "919649536031",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e043ecbb50ccbf2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-vpc-public-rt"
            },
            "tags_all": {
              "Name": "production-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb81d2a1fe7c7060"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919649536031",
            "id": "rtb-0c2295a4324d9c76c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bedc0dc39a352d16",
            "region": "ap-south-1",
            "route_table_id": "rtb-07925bc761839f55f",
            "subnet_id": "subnet-0bf4570851e858c68"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081c020b2dac751db",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c2295a4324d9c76c",
            "subnet_id": "subnet-0c3c95c88c54c13cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919649536031:subnet/subnet-0bf4570851e858c68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf4570851e858c68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "919649536031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "production-vpc-private-subnet"
            },
            "tags_all": {
              "Name": "production-vpc-private-subnet"
            },
            "vpc_id": "vpc-0cb81d2a1fe7c7060"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919649536031",
            "id": "subnet-0bf4570851e858c68",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919649536031:subnet/subnet-0c3c95c88c54c13cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3c95c88c54c13cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "919649536031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "production-vpc-public-subnet"
            },
            "tags_all": {
              "Name": "production-vpc-public-subnet"
            },
            "vpc_id": "vpc-0cb81d2a1fe7c7060"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919649536031",
            "id": "subnet-0c3c95c88c54c13cb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:919649536031:vpc/vpc-0cb81d2a1fe7c7060",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e1dfd34535da3ab4",
            "default_route_table_id": "rtb-0046d4bf5bc80e77a",
            "default_security_group_id": "sg-0289be9e61c946a31",
            "dhcp_options_id": "dopt-073797b928a78e511",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cb81d2a1fe7c7060",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0046d4bf5bc80e77a",
            "owner_id": "919649536031",
            "region": "ap-south-1",
            "tags": {
              "Name": "production-vpc-vpc"
            },
            "tags_all": {
              "Name": "production-vpc-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919649536031",
            "id": "vpc-0cb81d2a1fe7c7060",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}